# mygame

./: CMakeLists.txt  CMakelists.txt  README.md  main.cpp
Age_of_Stone/: Age of Stone.pro  CMakeLists.txt  board.cpp  board.h  card.cpp  card.h  cardimages.qrc  cardlist.cpp  cardlist.h  game.cpp  game.h  interfunc.cpp  interfunc.h  main.cpp  mainwindow.ui
